--- a/intro.html
+++ b/intro.html
@@ -115,7 +115,14 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 </ul></li>
 <li class="chapter" data-level="2.2" data-path="intro.html"><a href="intro.html#logical-operators-if-statements"><i class="fa fa-check"></i><b>2.2</b> Logical Operators &amp; if-Statements</a></li>
 </ul></li>
-<li class="chapter" data-level="3" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html"><i class="fa fa-check"></i><b>3</b> Introduction to Data Wrangling</a></li>
+<li class="chapter" data-level="3" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html"><i class="fa fa-check"></i><b>3</b> Introduction to Data Wrangling</a><ul>
+<li class="chapter" data-level="3.1" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html#the-study"><i class="fa fa-check"></i><b>3.1</b> The study</a></li>
+<li class="chapter" data-level="3.2" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html#loading-in-data"><i class="fa fa-check"></i><b>3.2</b> Loading in Data</a><ul>
+<li class="chapter" data-level="3.2.1" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html#loading-packages"><i class="fa fa-check"></i><b>3.2.1</b> Loading Packages</a></li>
+<li class="chapter" data-level="3.2.2" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html#setting-the-working-directory"><i class="fa fa-check"></i><b>3.2.2</b> setting the working directory</a></li>
+<li class="chapter" data-level="3.2.3" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html#reading-in-data"><i class="fa fa-check"></i><b>3.2.3</b> Reading in Data</a></li>
+</ul></li>
+</ul></li>
 <li class="chapter" data-level="4" data-path="methods.html"><a href="methods.html"><i class="fa fa-check"></i><b>4</b> Methods</a></li>
 <li class="chapter" data-level="5" data-path="applications.html"><a href="applications.html"><i class="fa fa-check"></i><b>5</b> Applications</a><ul>
 <li class="chapter" data-level="5.1" data-path="applications.html"><a href="applications.html#example-one"><i class="fa fa-check"></i><b>5.1</b> Example one</a></li>
@@ -286,33 +293,6 @@ x[<span class="dv">4</span>]</code></pre></div>
 </tbody>
 </table>
 <p>Now that you have a basic understanding of logical operators, we can use them in order to specify code to manipulate variables in a particular way. For this example, we will be working with the function <code>if_else()</code>. However, one question you may have is what is a function in R? I will describe the structure of functions, starting with a simple one.</p>
-<table style="width:65%;">
-<colgroup>
-<col width="9%" />
-<col width="19%" />
-<col width="22%" />
-<col width="6%" />
-<col width="6%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th align="center">function: if you give an input, the function will do some computation and return an output</th>
-<th>arguments: this is the structure of how the input is recieved, every function has preference</th>
-<th align="center">output: this is what the function returns</th>
-<th align="center">input</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="center">max(): this function finds the maximum number in a numeric vector</td>
-<td>(c(1,2,3,4)): parameters are the things you input into teh function to get a specified output</td>
-<td align="center">less than</td>
-<td align="center">x &lt; 10</td>
-<td align="center">TRUE</td>
-</tr>
-</tbody>
-</table>
-<p>```</p>
 
 </div>
 </div>
