Update the book

--- a/index.html
+++ b/index.html
@@ -115,20 +115,12 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 </ul></li>
 <li class="chapter" data-level="2.2" data-path="intro.html"><a href="intro.html#logical-operators-if-statements"><i class="fa fa-check"></i><b>2.2</b> Logical Operators &amp; if-Statements</a></li>
 </ul></li>
-<li class="chapter" data-level="3" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html"><i class="fa fa-check"></i><b>3</b> Introduction to Data Wrangling</a><ul>
-<li class="chapter" data-level="3.1" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html#the-study"><i class="fa fa-check"></i><b>3.1</b> The study</a></li>
-<li class="chapter" data-level="3.2" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html#loading-in-data"><i class="fa fa-check"></i><b>3.2</b> Loading in Data</a><ul>
-<li class="chapter" data-level="3.2.1" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html#loading-packages"><i class="fa fa-check"></i><b>3.2.1</b> Loading Packages</a></li>
-<li class="chapter" data-level="3.2.2" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html#setting-the-working-directory"><i class="fa fa-check"></i><b>3.2.2</b> setting the working directory</a></li>
-<li class="chapter" data-level="3.2.3" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html#reading-in-data"><i class="fa fa-check"></i><b>3.2.3</b> Reading in Data</a></li>
+<li class="chapter" data-level="3" data-path="methods.html"><a href="methods.html"><i class="fa fa-check"></i><b>3</b> Methods</a></li>
+<li class="chapter" data-level="4" data-path="applications.html"><a href="applications.html"><i class="fa fa-check"></i><b>4</b> Applications</a><ul>
+<li class="chapter" data-level="4.1" data-path="applications.html"><a href="applications.html#example-one"><i class="fa fa-check"></i><b>4.1</b> Example one</a></li>
+<li class="chapter" data-level="4.2" data-path="applications.html"><a href="applications.html#example-two"><i class="fa fa-check"></i><b>4.2</b> Example two</a></li>
 </ul></li>
-</ul></li>
-<li class="chapter" data-level="4" data-path="methods.html"><a href="methods.html"><i class="fa fa-check"></i><b>4</b> Methods</a></li>
-<li class="chapter" data-level="5" data-path="applications.html"><a href="applications.html"><i class="fa fa-check"></i><b>5</b> Applications</a><ul>
-<li class="chapter" data-level="5.1" data-path="applications.html"><a href="applications.html#example-one"><i class="fa fa-check"></i><b>5.1</b> Example one</a></li>
-<li class="chapter" data-level="5.2" data-path="applications.html"><a href="applications.html#example-two"><i class="fa fa-check"></i><b>5.2</b> Example two</a></li>
-</ul></li>
-<li class="chapter" data-level="6" data-path="final-words.html"><a href="final-words.html"><i class="fa fa-check"></i><b>6</b> Final Words</a></li>
+<li class="chapter" data-level="5" data-path="final-words.html"><a href="final-words.html"><i class="fa fa-check"></i><b>5</b> Final Words</a></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
@@ -158,7 +150,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <div id="download" class="section level1">
 <h1><span class="header-section-number">Chapter 1</span> How to Install R</h1>
 <p>This is the EMaC manual for how to wrangle, analyze, and visualize data in <strong>R</strong>. I will review a few key packages, in addition to explaing their key functions, with real data examples.</p>
-<p>There are two things you need to do to install R on your computer. First, you would need to install the latest version of R which you would download and install from this link: <a href="https://cloud.r-project.org/">R-download</a>. Once you run and install R onto your computer, you would need to install R-Studio. R studio is the graphic user interface (GUI) where you can place all of your R-code. Follow this link: <a href="https://rstudio.com/products/rstudio/download/">R-Studio Desktop Download</a>. Once you have these two programs installed, all you need to do is launch R-studio Desktop and you are ready to go.</p>
+<p>There are two things you need to do to install R on your computer. First, you would need to install the latest version of R which you would download and install from this link: <a href="https://cloud.r-project.org/">R-download</a>. Once you run and install R onto your computer, you would need to install R-Studio. R studio is the graphic user interface (GUI) where you can place all of your R-code. Follow this link: <a href="https://rstudio.com/products/rstudio/download/">R-Studio Desktop Download</a>. Once you have these two programs installed, all you need to do is launch R-studio Desktop and you are ready to go..</p>
 
 </div>
             </section>
