--- a/final-words.html
+++ b/final-words.html
@@ -114,7 +114,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="chapter" data-level="2.1.3" data-path="intro.html"><a href="intro.html#logical"><i class="fa fa-check"></i><b>2.1.3</b> Logical</a></li>
 <li class="chapter" data-level="2.1.4" data-path="intro.html"><a href="intro.html#vector"><i class="fa fa-check"></i><b>2.1.4</b> Vector</a></li>
 </ul></li>
-<li class="chapter" data-level="2.2" data-path="intro.html"><a href="intro.html#logical-operators-if-statements"><i class="fa fa-check"></i><b>2.2</b> Logical Operators &amp; if-Statements</a></li>
+<li class="chapter" data-level="2.2" data-path="intro.html"><a href="intro.html#logical-operators"><i class="fa fa-check"></i><b>2.2</b> Logical Operators</a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html"><i class="fa fa-check"></i><b>3</b> Introduction to Data Wrangling</a><ul>
 <li class="chapter" data-level="3.1" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html#the-study"><i class="fa fa-check"></i><b>3.1</b> The study</a></li>
