--- a/intro.html
+++ b/intro.html
@@ -114,7 +114,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="chapter" data-level="2.1.3" data-path="intro.html"><a href="intro.html#logical"><i class="fa fa-check"></i><b>2.1.3</b> Logical</a></li>
 <li class="chapter" data-level="2.1.4" data-path="intro.html"><a href="intro.html#vector"><i class="fa fa-check"></i><b>2.1.4</b> Vector</a></li>
 </ul></li>
-<li class="chapter" data-level="2.2" data-path="intro.html"><a href="intro.html#logical-operators-if-statements"><i class="fa fa-check"></i><b>2.2</b> Logical Operators &amp; if-Statements</a></li>
+<li class="chapter" data-level="2.2" data-path="intro.html"><a href="intro.html#logical-operators"><i class="fa fa-check"></i><b>2.2</b> Logical Operators</a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html"><i class="fa fa-check"></i><b>3</b> Introduction to Data Wrangling</a><ul>
 <li class="chapter" data-level="3.1" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html#the-study"><i class="fa fa-check"></i><b>3.1</b> The study</a></li>
@@ -226,8 +226,8 @@ x[<span class="dv">4</span>]</code></pre></div>
 <p>Here, we assigned the numbers: <code>10, 20, 30, 40</code> to the vector <code>x</code>. <code>&quot;Cognitive Psychology&quot;</code> to the variable <code>x</code>. There are ways to manipulate character type variables, and also modify them. However, we will touch on that later.</p>
 </div>
 </div>
-<div id="logical-operators-if-statements" class="section level2">
-<h2><span class="header-section-number">2.2</span> Logical Operators &amp; if-Statements</h2>
+<div id="logical-operators" class="section level2">
+<h2><span class="header-section-number">2.2</span> Logical Operators</h2>
 <p>Now that you have a basic understanding of how variables work in R, the next step is to learn how to use logical operators in order to specifiy what are the specific conditions under which you want your variables to be manipulated. The main way to do this in R is by using logical operators.</p>
 <p><strong><em><code>x = 2</code></em></strong></p>
 <p>Here, we assigned the numeric value <code>2</code> to the variable <code>x</code>. Thus, if we were to apply logical operators to <code>x</code>, <code>x</code> will be treated as <code>2</code>. Here are examples of all of the logical operators:</p>
@@ -297,7 +297,6 @@ x[<span class="dv">4</span>]</code></pre></div>
 </tr>
 </tbody>
 </table>
-<p>Now that you have a basic understanding of logical operators, we can use them in order to specify code to manipulate variables in a particular way. For this example, we will be working with the function <code>if_else()</code>. However, one question you may have is what is a function in R? I will describe the structure of functions, starting with a simple one.</p>
 
 </div>
 </div>
