--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 </ul></li>
 <li class="chapter" data-level="3.3" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html#dplyr-package"><i class="fa fa-check"></i><b>3.3</b> Dplyr() Package</a><ul>
 <li class="chapter" data-level="3.3.1" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html#select"><i class="fa fa-check"></i><b>3.3.1</b> select()</a></li>
-<li class="chapter" data-level="3.3.2" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html#arrange"><i class="fa fa-check"></i><b>3.3.2</b> arrange()</a></li>
+<li class="chapter" data-level="3.3.2" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html#group_by-summarise"><i class="fa fa-check"></i><b>3.3.2</b> group_by() &amp; summarise()</a></li>
+<li class="chapter" data-level="3.3.3" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html#arrange"><i class="fa fa-check"></i><b>3.3.3</b> arrange()</a></li>
+<li class="chapter" data-level="3.3.4" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html#filter"><i class="fa fa-check"></i><b>3.3.4</b> filter()</a></li>
+<li class="chapter" data-level="3.3.5" data-path="introduction-to-data-wrangling.html"><a href="introduction-to-data-wrangling.html#mutate"><i class="fa fa-check"></i><b>3.3.5</b> mutate()</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="4" data-path="methods.html"><a href="methods.html"><i class="fa fa-check"></i><b>4</b> Methods</a></li>
