Update the book

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 </ul></li>
 <li class="chapter" data-level="4.2" data-path="plotting.html"><a href="plotting.html#plotting-experimental-analysis"><i class="fa fa-check"></i><b>4.2</b> Plotting: Experimental Analysis</a><ul>
 <li class="chapter" data-level="4.2.1" data-path="plotting.html"><a href="plotting.html#plotting-levels-of-one-categorical-variable"><i class="fa fa-check"></i><b>4.2.1</b> Plotting Levels of One Categorical Variable</a></li>
+<li class="chapter" data-level="4.2.2" data-path="plotting.html"><a href="plotting.html#plotting-levels-of-multiple-categorical-variables"><i class="fa fa-check"></i><b>4.2.2</b> Plotting Levels of Multiple Categorical Variables</a></li>
 </ul></li>
 </ul></li>
 <li class="divider"></li>
